added: minfied versions and maps

--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,7 @@
 <body>
 <div class="circle"></div>
 
-<script src="dist/progress.js"></script>
+<script src="dist/progress.min.js"></script>
 <script>
     var circle = document.querySelector( '.circle' );
 
