added: scss and typescript usage

--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Circle Progress Demo</title>
-    <link rel="stylesheet" href="dist/progress.css">
+    <link rel="stylesheet" type="text/css" href="dist/progress.css">
     <style type="text/css">
         .circle {
             width: 150px;
