--- a/demo.html
+++ b/demo.html
@@ -5,9 +5,23 @@
     <title>Circle Progress Demo</title>
     <link rel="stylesheet" type="text/css" href="dist/progress.css">
     <style type="text/css">
+        body {
+            box-sizing: border-box;
+            margin: 0;
+        }
+
+        * {
+            box-sizing: inherit;
+        }
+
         .circle {
             width: 150px;
             height: 150px;
+
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
@@ -22,7 +36,7 @@
     p.progress( 20 );
 
     window.setTimeout( () => p.progress_animate( 40, 500 ), 1000 );
-    window.setTimeout( () => p.progress_animate( 100, 1000 ), 2000 );
+    window.setTimeout( () => p.progress_animate( 100, 10000 ), 2000 );
 </script>
 </body>
 </html>
