--- a/demo.html
+++ b/demo.html
@@ -8,6 +8,8 @@
         body {
             box-sizing: border-box;
             margin: 0;
+            width: 100%;
+            height: 100%;
         }
 
         * {
